<resources>
    <string name="app_name">AgriBot</string>
    <string name="splash_logo">Splash Screen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="become_a_partner">Become a Partner</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="gym">Gym</string>
    <string name="nutrients">Nutrients</string>
    <string name="fill_the_required_information">Fill the required information</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="gym_type">Gym Type</string>
    <string name="upload_gym_license">Upload Gym License</string>
    <string name="upload_nutrients_license">Upload Nutrients License</string>
    <string name="signup">Signup</string>
    <string name="center_name">Center Name</string>
    <string name="gym_name">Gym Name</string>
    <string name="nutrients_name">Nutrients Name</string>
    <string name="experience">Experience</string>
    <string name="upload_center_license">Upload Center License</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">date of birth</string>
    <string name="next">Next</string>
    <string name="height">Height (CM)</string>
    <string name="weight">Weight (KG)</string>
    <string name="gender">Gender</string>
    <string name="tell_us_about_your_life">Tell Us About Your Life</string>
    <string name="do_you_have_any_disease">Do you have any disease?</string>
    <string name="do_you_have_any_allergies">Do you have any allergies?</string>
    <string name="nutrient">Nutrient</string>
    <string name="nutrition_centers">Nutrition Centers</string>
    <string name="health_food">Health Food</string>
    <string name="my_information">My Information</string>
    <string name="patient_records">Patient Records</string>
    <string name="my_offers">My Offers</string>
    <string name="records">Records</string>
    <string name="gym_offers">Gym Offers</string>
    <string name="my_activity">My Activity</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="gym_reservation">Gym Reservation</string>
    <string name="online_appointment_link">Online Appointment Link</string>
    <string name="cancel_appointment">Cancel Appointment</string>
    <string name="food_list_of_the_week">Food list of the week</string>
    <string name="upload_your_inbody_test_file">Upload your inbody test file</string>
    <string name="health_restaurant_name">Health restaurant name</string>
    <string name="upload_restaurant_license">Upload Restaurant Licence</string>
    <string name="social_media_accounts">Social Media Accounts</string>
    <string name="nutritionist">Nutritionist</string>
    <string name="nutritionist_name">Nutritionist Name</string>
    <string name="upload_nutritionist_license">Upload Nutritionist License</string>



    <string name="Dashboard">Dashboard</string>
    <string name="myprofile">My Profile</string>
    <string name="Weather">Weather</string>
    <string name="Soil">Soil</string>
    <string name="Progress">Progress</string>
    <string name="Robot">Robot</string>
    <string name="Report">Reports</string>
    <string name="update" />
    <string name="myinfolabel" />
    <string name="Reort">Reort</string>
    <string name="report_Title">Report Title</string>
    <string name="Reported">Reported</string>
    <string name="send">Send</string>
    <string name="avalibaletime">avalibaletime</string>
    <string name="pricing_and_avaliability">pricing_and_avaliability</string>
    <string name="sessionprice">sessionprice</string>
    <string name="contactinfo">contactinfo</string>
    <string name="general">General</string>
    <string name="location">Location</string>
    <string name="pricingdetail">pricingdetail</string>
    <string name="Settings" />


</resources>