<!-- menu_user_side.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <!-- Your extra items for the side menu -->
        <item
            android:id="@+id/nav_bar_item_myprofile"
            android:enabled="true"
            android:icon="@drawable/user_4_fill__4_"
            android:title="@string/myprofile"
            android:visible="false"/>
        <item
            android:id="@+id/nav_bar_item_reports"
            android:enabled="true"
            android:icon="@drawable/round_report"
            android:title="Report List" />
        <!-- Include the common items from menu_user -->
        <item
            android:id="@+id/nav_bar_item_dashboard"
            android:enabled="true"
            android:icon="@drawable/round_dashboard__1_"
            android:title="@string/Dashboard"
            android:visible="true"/>


        <item
            android:id="@+id/nav_bar_item_progress"
            android:enabled="true"
            android:icon="@drawable/progress__2_"
            android:title="@string/Progress"
            android:visible="true"/>

        <item
            android:id="@+id/nav_bar_item_soil"
            android:enabled="true"
            android:icon="@drawable/soil_moisture_field"
            android:title="@string/Soil"
            android:visible="true"/>


        <item
            android:id="@+id/nav_bar_item_crop"
            android:enabled="true"
            android:icon="@drawable/plant_bold"
            android:title="Crop Health"
            android:visible="true"/>



    </group>
</menu>
