<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_bar_item_dashboard_bottom"
            android:enabled="true"
            android:icon="@drawable/round_dashboard__1_"
            android:title="@string/Dashboard" />

        <item
            android:id="@+id/nav_bar_item_progress_bottom"
            android:enabled="true"
            android:icon="@drawable/progress__2_"
            android:title="@string/Progress" />

        <item
            android:id="@+id/nav_bar_item_soil_bottom"
            android:enabled="true"
            android:icon="@drawable/soil_moisture_field"
            android:title="@string/Soil" />
        <item
            android:id="@+id/nav_bar_item_myprofile_bottom"
            android:enabled="true"
            android:icon="@drawable/plant_bold"
            android:title="Crops" />


    </group>
</menu>