<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_bar_item_dashboard"
            android:enabled="true"
            android:icon="@drawable/round_dashboard__1_"
            android:title="@string/Dashboard"
            android:visible="true"/>


        <item
            android:id="@+id/nav_bar_item_progress"
            android:enabled="true"
            android:icon="@drawable/progress__2_"
            android:title="@string/Progress"
            android:visible="true"/>

        <item
            android:id="@+id/nav_bar_item_soil"
            android:enabled="true"
            android:icon="@drawable/soil_moisture_field"
            android:title="@string/Soil"
            android:visible="true"/>


        <item
            android:id="@+id/nav_bar_item_crop"
            android:enabled="true"
            android:icon="@drawable/plant_bold"
            android:title="Crop Health"
            android:visible="true"/>

        <item
            android:id="@+id/nav_bar_item_Settings"
            android:enabled="true"
            android:icon="@drawable/setting__2_"
            android:title="Settings"
            android:visible="true"/>




    </group>
</menu>