<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".screens.AdminLoginFragment">

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="433dp"
        android:layout_height="423dp"
        android:layout_marginTop="446dp"
        android:adjustViewBounds="true"
        android:src="@drawable/back2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_back" />

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar" />


    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="106dp"
        android:layout_marginBottom="698dp"
        android:fontFamily="@font/bree_serif"
        android:text="Admin Login"
        android:textAlignment="viewStart"
        android:textColor="@color/dark_green1"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_login"
        style="@style/genericButton"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="18dp"
        android:backgroundTint="@color/green3"
        android:enabled="true"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_password"
        tools:enabled="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        style="@style/genericEditText"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome"
        app:startIconDrawable="@drawable/user_4_fill__2_">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/genericMaterialTextInputEditText"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="210dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/genericEditText"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_username"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/genericMaterialTextInputEditText"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="16dp" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>